Bug 294321 - Konqueror status bar is huge
Summary: Konqueror status bar is huge
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-17 22:24 UTC by Chris Burel
Modified: 2012-03-05 18:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Screenshot of konqueror showing how big the status bar is. (487.74 KB, image/png)
2012-02-17 22:24 UTC, Chris Burel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Burel 2012-02-17 22:24:22 UTC
Created attachment 68888 [details]
Screenshot of konqueror showing how big the status bar is.

Version:           4.8.0 (using KDE 4.8.0) 
OS:                Linux

The status bar on my copy of Konqueror is gigantic.

Reproducible: Always

Steps to Reproduce:
Launch Konqueror

Actual Results:  
Status bar is huge

Expected Results:  
Status bar should fit to the size of its contents

Built from the KDE/4.8 branch in git.
Comment 1 Dawit Alemayehu 2012-02-18 06:47:03 UTC
Cannot reproduce that here. Whatever style you are using, change it to something else and see if that solves your problem. Personally, I have never seen the status bar being that big. Are there any related error messages being printed out in your ~/.xsession-errors file ?
Comment 2 Chris Burel 2012-02-21 19:45:55 UTC
Changing the style doesn't seem to fix anything.  I've also removed ~/.kde/share/apps/konqueror and ~/.kde/share/config/konquerorrc to no effect.  Before I removed those files, this used to be printed to the shell:

QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QPainter::font: Painter not active
QPainter::setFont: Painter not active
QPainter::setPen: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active

But after removing the rc files, I get no errors in the shell, and nothing comes up in .xsession-error when I launch Konqueror
Comment 3 Dawit Alemayehu 2012-03-02 15:22:56 UTC
Git commit 48e804dbe4dd4bebc362e722c69df6e797605437 by Dawit Alemayehu.
Committed on 24/02/2012 at 09:23.
Pushed by adawit into branch 'KDE/4.8'.

Always use small size icons on the status bar.

Fixes the intermittent issue of the status bar becoming huge when the
the requested status bar icon could not be found and the default icon
is returned instead.
FIXED-IN: 4.8.1
REVIEW: 104071

M  +11   -4    konqueror/src/konqframestatusbar.cpp

http://commits.kde.org/kde-baseapps/48e804dbe4dd4bebc362e722c69df6e797605437
Comment 4 Dawit Alemayehu 2012-03-02 16:14:09 UTC
Git commit fe97f31823d64372f0fb0d21bd45d04f4dd58988 by Dawit Alemayehu.
Committed on 24/02/2012 at 09:23.
Pushed by adawit into branch 'master'.

Always use small size icons on the status bar.

Fixes the intermittent issue of the status bar becoming huge when the
the requested status bar icon could not be found and the default icon
is returned instead.
FIXED-IN: 4.8.1
REVIEW: 104071
(cherry picked from commit 48e804dbe4dd4bebc362e722c69df6e797605437)

M  +11   -4    konqueror/src/konqframestatusbar.cpp

http://commits.kde.org/kde-baseapps/fe97f31823d64372f0fb0d21bd45d04f4dd58988
Comment 5 David Faure 2012-03-05 13:32:14 UTC
OK. We fixed the actual cause for this bug in the oxygen widget style though, it was creating a KIcon before the main componentdata existed, so this messed up konqueror's iconloader search paths.
See commit a2cc9786c70.

Just saying, that was the actual fix for this bug, but the precaution against huge sizes is good to have too ;)
Comment 6 Chris Burel 2012-03-05 18:32:40 UTC
I recompiled this morning, and this fix is working for me.  Thanks!