Always use small size icons on the status bar.

Fixes the intermittent issue of the status bar becoming huge when the
the requested status bar icon could not be found and the default icon
is returned instead.

BUG: 294321
FIXED-IN: 4.8.1
REVIEW: 104071